CSS refactor. Fix CSS bugs on mobile.

--- a/components/Background/index.scss
+++ b/components/Background/index.scss
@@ -2,6 +2,8 @@
 
 .background {
   position: fixed;
+  // Prevent bug on mobile that causes a white bar to appear on bottom of screen when scrolling.
+  height: 200vh;
   left: 0;
   top: 0;
   right: 0;
